# beaunifi

./: README.md  pyproject.toml  setup.bat  setup.sh
examples/: __init__.py  example_usage.py
mcp-configs/: antigravity.json  claude-code.json  cursor.json  generic-mcp.json
src/beaunifi/: __init__.py  server.py  utils.py
tests/: __init__.py  test_utils.py
