[project]
name = "beaunifi"
version = "1.0.0"
description = "MCP Server for beautifying and minifying JS/CSS with auto-detection"
authors = [{ name = "Developer", email = "dev@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "jsbeautifier>=1.15.0",
    "cssbeautifier>=1.15.0",
    "jsmin>=3.0.0",
    "rcssmin>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
beaunifi = "beaunifi.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beaunifi"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
